# INSA_G8

./: .env  .gitignore  =0.21.0  COMPLETE_FILE_SUMMARY.md  README (1).md  README.md  __init__.py  __main__.py  allowlist.txt  cli.py  crawler.py  db.py  ethioscan.db  ethioscan.py  fuzzer.py  payloads.py  pyproject.toml  reporter.py  requirements.txt  run_scan.py  scan_report.txt  scanner.py  utils.py
ethioscan/: allowlist.txt  cli.py  database.py  ethioscan_db.py  fuzzer.py  reporter.py  run_scan.py  scanner.py  utils.py
ethioscan/backend/: api.py
ethioscan/cli/: main.py
ethioscan/reporting/: report_generator.py
ethioscan/scanning/: network_scan.py
ethioscan/web/: main.py
ethioscan/web/static/: styles.css
ethioscan/web/templates/: base.html  index.html  report_template.html
examples/: sample_findings.json  sample_summary.txt
frontend/: index.html
templates/: report_template.html
tests/: test_crawler.py  test_fuzzer.py  test_scanner.py
tests/fixtures/: test_page.html  test_server.py
