[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethioscan"
version = "0.1.0"
description = "Security scanning and reporting tool for EthioScan"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "flask"
]

[tool.setuptools.packages.find]
where = ["ethioscan"]
